KVG-3900 respect GitHub merge methods
